--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "blackjack-vite",
+  "homepage": "https://enriquecerioni.github.io/blackjack/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "underscore": "^1.13.7"
   }
 }
